make visibility bug?

--- a/style.scss
+++ b/style.scss
@@ -74,6 +74,7 @@ a:hover {
       background-color: rgba(0,0,0,.01);
       background-color: darken(#FCFCFC,1%);
       border-bottom: 1px solid #eee;
+      overflow: visible;
       box-shadow: inset 0 1px 1px rgba(255,255,255,.8);
     }
 
